feat: Add work order file listing and viewing functionality
This commit introduces the ability to list and view work order documentation files within the application.

- **Client-side (BlazorTool.Client):**
    - Added `WorkOrderFileItem` model for file representation.
    - Implemented `GetWorkOrderDirectoryFiles` and `GetWorkOrderFile` methods in `ApiServiceClient` for fetching file lists and individual file data, including caching.
    - Enhanced `FullDeviceInfo` model to include a list of `WorkOrderFileItem`.
    - Updated `DeviceDisplay` component to show a list of documentation files using `TelerikListView`.
    - Added `OpenFile` and `GetFileIcon` methods to `DeviceDisplay` to handle file opening and display appropriate icons.
    - Modified `GetAllDevicesCachedAsync` to `GetAllDevicesAsync` in `ApiServiceClient` and updated its usages across `OrdersGrid`, `WorkOrderComponent`, and `DevicesPage`.
    - Refactored `OrdersPage` to include a "Reload All Data" button and a `HardLoadData` method for explicit data refresh.
    - Added localization strings for "Documentation Files".

- **Server-side (BlazorTool):**
    - Added `GetFile` endpoint to `DeviceController` to serve individual work order files, including path normalization.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1022,4 +1022,7 @@
   <data name="DeviceDisplay_LoadingInfo" xml:space="preserve">
     <value>Ładowanie informacji o urządzeniu...</value>
   </data>
+  <data name="DeviceDisplay_DocumentationFiles" xml:space="preserve">
+    <value>Pliki dokumentacji</value>
+  </data>
 </root>
