feat: Implement activity cost and date tracking
- Added `Cost` and `ActDate` fields to `Activity` and `AddActivity` models.
- Updated `ActivityDisplay`, `ActivityList`, and `AddActivityForm` components to support cost and activity date display, input, and calculation.
- `ActivityList` now shows total cost and total workload for work orders.
- `AddActivityForm` allows selecting an activity date within the work order's start and end dates.
- Enhanced employee data handling by adding `ActPersonsName` to the `Activity` model for easier display in `ActivityList`.
- Added `RigthMatrixID` and `DepartmentID` fields to the `IdentityData` model for authorization system updates.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -715,6 +715,15 @@
   <data name="ActivityList_Workload_Placeholder" xml:space="preserve">
     <value>Wprowadź obciążenie</value>
   </data>
+  <data name="ActivityList_Cost_Placeholder" xml:space="preserve">
+    <value>Wprowadź coszt</value>
+  </data>
+  <data name="ActivityList_ActDate" xml:space="preserve">
+    <value>Data rozpoczęcia</value>
+  </data>
+  <data name="ActivityList_ActDate_Placeholder" xml:space="preserve">
+    <value>Wprowadź datę początkową</value>
+  </data>
   <data name="ActivityList_Description_Placeholder" xml:space="preserve">
     <value>Wprowadź opis</value>
   </data>
@@ -764,6 +773,9 @@
     <value>Należy wybrać kategorię.</value>
   </data>
   <data name="Workload_Positive" xml:space="preserve">
+    <value>Coszt musi być liczbą dodatnią.</value>
+  </data>
+  <data name="Cost_Positive" xml:space="preserve">
     <value>Obciążenie musi być liczbą dodatnią.</value>
   </data>
   <data name="Description_Required" xml:space="preserve">
@@ -1036,5 +1048,8 @@
   </data>
   <data name="DeviceDisplay_NoDocumentationFiles" xml:space="preserve">
     <value>Nie znaleziono plików dokumentacji.</value>
+  </data>
+  <data name="Total" xml:space="preserve">
+    <value>Łącznie</value>
   </data>
 </root>
