--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -717,6 +717,15 @@
   <data name="ActivityList_Workload_Placeholder" xml:space="preserve">
     <value>Enter workload</value>
   </data>
+  <data name="ActivityList_Cost_Placeholder" xml:space="preserve">
+    <value>Enter cost</value>
+  </data>
+  <data name="ActivityList_ActDate" xml:space="preserve">
+    <value>Start date</value>
+  </data>
+  <data name="ActivityList_ActDate_Placeholder" xml:space="preserve">
+    <value>Enter start date</value>
+  </data>
   <data name="ActivityList_Description_Placeholder" xml:space="preserve">
     <value>Enter description</value>
   </data>
@@ -769,6 +778,9 @@
     <value>Category must be selected.</value>
   </data>
   <data name="Workload_Positive" xml:space="preserve">
+    <value>Cost must be a positive number.</value>
+  </data>
+  <data name="Cost_Positive" xml:space="preserve">
     <value>Workload must be a positive number.</value>
   </data>
   <data name="Description_Required" xml:space="preserve">
@@ -1037,11 +1049,15 @@
     <value>Yes</value>
     <comment>Yes</comment>
   </data>
-    <data name="No" xml:space="preserve">
+  <data name="No" xml:space="preserve">
     <value>No</value>
     <comment>No</comment>
   </data>
   <data name="DeviceDisplay_NoDocumentationFiles" xml:space="preserve">
     <value>No documentation files found.</value>
+  </data>
+  <data name="Total" xml:space="preserve">
+    <value>Total</value>
+    <comment>Total</comment>
   </data>
 </root>
