Fixed: Downloading documents with Hardcode credentials

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -303,6 +303,9 @@
   <data name="Settings_NetworkSharePassword" xml:space="preserve">
     <value>Hasło udziału sieciowego</value>
   </data>
+  <data name="Settings_NetworkShareServer" xml:space="preserve">
+    <value>Serwer udziału sieciowego</value>
+  </data>
   <data name="MainLayout_ApplicationLoading" xml:space="preserve">
     <value>Aplikacja się ładuje...</value>
   </data>
