--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -234,6 +234,9 @@
   <data name="Settings_NetworkSharePassword" xml:space="preserve">
     <value>Network Share Password</value>
   </data>
+  <data name="Settings_NetworkShareServer" xml:space="preserve">
+    <value>Network Share Server</value>
+  </data>
   <data name="Home_Orders" xml:space="preserve">
     <value>ORDERS</value>
   </data>
