--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -225,8 +225,17 @@
   <data name="Login_LoginFailed" xml:space="preserve">
     <value>Logowanie nie powiodło się. Sprawdź swoje dane.</value>
   </data>
-  <data name="Login_AnErrorOccurred" xml:space="preserve">
+  <data name="Settings_AnErrorOccurred" xml:space="preserve">
     <value>Wystąpił błąd:</value>
+  </data>
+  <data name="Settings_NetworkShareUsername" xml:space="preserve">
+    <value>Nazwa użytkownika udziału sieciowego</value>
+  </data>
+  <data name="Settings_NetworkSharePassword" xml:space="preserve">
+    <value>Hasło udziału sieciowego</value>
+  </data>
+  <data name="Settings_NetworkShareServer" xml:space="preserve">
+    <value>Serwer udziału sieciowego</value>
   </data>
   <data name="Home_Orders" xml:space="preserve">
     <value>ZLECENIA</value>
@@ -293,18 +302,6 @@
   </data>
   <data name="Settings_RestartApplyApi" xml:space="preserve">
     <value>Aplikacja zostanie ponownie uruchomiona, aby zastosować nowy adres API.</value>
-  </data>
-  <data name="Settings_AnErrorOccurred" xml:space="preserve">
-    <value>Wystąpił błąd:</value>
-  </data>
-  <data name="Settings_NetworkShareUsername" xml:space="preserve">
-    <value>Nazwa użytkownika udziału sieciowego</value>
-  </data>
-  <data name="Settings_NetworkSharePassword" xml:space="preserve">
-    <value>Hasło udziału sieciowego</value>
-  </data>
-  <data name="Settings_NetworkShareServer" xml:space="preserve">
-    <value>Serwer udziału sieciowego</value>
   </data>
   <data name="MainLayout_ApplicationLoading" xml:space="preserve">
     <value>Aplikacja się ładuje...</value>
@@ -784,6 +781,9 @@
   <data name="Workload_Positive" xml:space="preserve">
     <value>Coszt musi być liczbą dodatnią.</value>
   </data>
+  <data name="Workload_0_24" xml:space="preserve">
+    <value>Wartość musi być z zakresu od 0 do 24</value>
+  </data>
   <data name="Cost_Positive" xml:space="preserve">
     <value>Obciążenie musi być liczbą dodatnią.</value>
   </data>
@@ -1060,5 +1060,8 @@
   </data>
   <data name="Total" xml:space="preserve">
     <value>Łącznie</value>
+  </data>
+  <data name="Login_AnErrorOccurred" xml:space="preserve">
+    <value>Wystąpił błąd:</value>
   </data>
 </root>
