Add activities page  with new components
This commit introduces a new activity management feature, allowing users to add, edit, and manage activities associated with work orders. Key components include `NewActivityFormComponent` for inputting activity details and `ActivitySchedulerItem` for rendering activities in various views (Month, Week, Day, Timeline).

The `ActivityAppointment` model has been created to support appointment-specific properties. The navigation menu has been updated to link to the new activities page, enhancing accessibility.

Additionally, the `ApiServiceClient` has been modified to retrieve activities from the API and cache, improving performance. Localization files have been updated for multi-language support, and CSS styles have been added for visual consistency.

Overall, the architecture has been enhanced to provide a cohesive user experience for activity management.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -198,6 +198,9 @@
   <data name="NavMenu_Scheduler" xml:space="preserve">
     <value>Harmonogram</value>
   </data>
+  <data name="NavMenu_Activities" xml:space="preserve">
+    <value>Aktywności</value>
+  </data>
   <data name="NavMenu_Settings" xml:space="preserve">
     <value>Ustawienia</value>
   </data>
@@ -390,6 +393,18 @@
   </data>
   <data name="Scheduler_Duplicate" xml:space="preserve">
     <value>Duplikuj</value>
+  </data>
+  <data name="Scheduler_AddNewActivity" xml:space="preserve">
+    <value>Dodaj nową czynność</value>
+  </data>
+  <data name="Scheduler_AddNewWorkOrder" xml:space="preserve">
+    <value>Dodaj nowe zlecenie</value>
+  </data>
+  <data name="Add_New_Activity" xml:space="preserve">
+    <value>Dodaj nową czynność</value>
+  </data>
+  <data name="NoActionsAvailable" xml:space="preserve">
+    <value>Brak dostępnych działań</value>
   </data>
   <data name="AppointmentEditor_AssetNo" xml:space="preserve">
     <value>Nr majątku:</value>
@@ -608,7 +623,7 @@
     <value>Dodać osobę do wybranej aktywności</value>
   </data>
   <data name="Add" xml:space="preserve">
-    <value>Dodać</value>
+    <value>Dodaj</value>
   </data>
   <data name="All_Fields_Required" xml:space="preserve">
     <value>Wszystkie pola są wymagane</value>
