Fix: timeslots height for Scheduler on ActivitiesPage

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -352,6 +352,9 @@
   <data name="Scheduler_ColumnWidth" xml:space="preserve">
     <value>Szerokość kolumn:</value>
   </data>
+  <data name="Scheduler_SlotDivisions" xml:space="preserve">
+    <value>Liczba podziałów slotu:</value>
+  </data>
   <data name="Scheduler_SlotDuration" xml:space="preserve">
     <value>Czas trwania slotu (min):</value>
   </data>
