--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -395,7 +395,7 @@
     <value>Usuń</value>
   </data>
   <data name="Add_New_Activity" xml:space="preserve">
-    <value>Dodaj nową czynność</value>
+    <value>Dodaj aktywność</value>
   </data>
   <data name="NoActionsAvailable" xml:space="preserve">
     <value>Brak dostępnych działań</value>
@@ -1075,5 +1075,20 @@
   </data>
   <data name="Login_AnErrorOccurred" xml:space="preserve">
     <value>Wystąpił błąd:</value>
+  </data>
+  <data name="Select_Device" xml:space="preserve">
+    <value>Wybierz urządzenie</value>
+  </data>
+  <data name="SelectWorkOrder" xml:space="preserve">
+    <value>Wybierz zlecenie</value>
+  </data>
+  <data name="ActivityList_EndDate" xml:space="preserve">
+    <value>Data zakończenia</value>
+  </data>
+  <data name="OpenOrder" xml:space="preserve">
+    <value>Otwórz zlecenie</value>
+  </data>
+  <data name="OpenActivity" xml:space="preserve">
+    <value>Otwórz aktywność</value>
   </data>
 </root>
