Add activity update functionality and logging improvements
- Introduced `UpdateActivity` class for activity details.
- Added `GetWorkLoadHours` method in `ActivityAppointment.cs`.
- Enhanced `ApiServiceClient` with an `UpdateActivity` method for handling HTTP PUT requests.
- Replaced `Console.WriteLine` with logging in `ApiServiceClient.Devices.cs`.
- Improved logging levels in `UserState.cs` and adjusted logging settings in `appsettings.Development.json`.
- Updated `ActivityController.cs` to handle activity updates via a new `Update` method.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1094,4 +1094,10 @@
   <data name="Login_AnErrorOccurred" xml:space="preserve">
     <value>Wystąpił błąd:</value>
   </data>
+  <data name="NoPermissionToEditActivity" xml:space="preserve">
+    <value>Brak uprawnień do edycji aktywności.</value>
+  </data>
+  <data name="NotYourActivity" xml:space="preserve">
+    <value>Nie jesteś na liście pracowników aktywności.</value>
+  </data>
 </root>
