fix: bug with WO description from activity add: menu Edit activity (localization, method, models)
Refactor activity management in NewActivityFormComponent

- Replaced multiple parameters with a single ActivityFormModel for better data encapsulation.
- Updated OnInitializedAsync to initialize ActivityFormModel properties directly.
- Enhanced activity creation and update logic to differentiate between new and existing activities.
- Added ActivityID property to NewActivityFormModel for editing existing activities.
- Updated ActivitiesPage.razor to utilize the new ActivityFormModel.
- Introduced context menu options for editing activities directly from the UI.
- Updated ApiServiceClient to include cached methods for retrieving activity categories.

--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -1110,4 +1110,7 @@
   <data name="NotYourActivity" xml:space="preserve">
     <value>You not in list of axtivity workers</value>
   </data>
+  <data name="EditActivity" xml:space="preserve">
+    <value>Edit activity</value>
+  </data>
 </root>
