--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1100,4 +1100,7 @@
   <data name="NotYourActivity" xml:space="preserve">
     <value>Nie jesteś na liście pracowników aktywności.</value>
   </data>
+  <data name="EditActivity" xml:space="preserve">
+    <value>Edytuj aktywność</value>
+  </data>
 </root>
