ActivitiesPage: Added variable for RowSize

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1103,4 +1103,7 @@
   <data name="EditActivity" xml:space="preserve">
     <value>Edytuj aktywność</value>
   </data>
+  <data name="SchedulerRowHeight" xml:space="preserve">
+    <value>Wysokość wiersza</value>
+  </data>
 </root>
