--- a/BlazorTool.Client/Resources/TelerikMessages.resx
+++ b/BlazorTool.Client/Resources/TelerikMessages.resx
@@ -1934,4 +1934,34 @@
   <data name="PdfViewer_DropZone_Hint" xml:space="preserve">
     <value>Drag and drop files here to upload</value>
   </data>
+  <data name="Scheduler_Recurrence_Editor_Monthly_RepeatOnDay" xml:space="preserve">
+    <value>Day</value>
+  </data>
+  <data name="Scheduler_Recurrence_Editor_Yearly_RepeatOnMonth" xml:space="preserve">
+    <value>Month</value>
+  </data>
+  <data name="Scheduler_Year" xml:space="preserve">
+    <value>Year</value>
+  </data>
+  <data name="Spreadsheet_CenterAlign" xml:space="preserve">
+    <value>Align center</value>
+  </data>
+  <data name="Spreadsheet_DecreaseFontSize" xml:space="preserve">
+    <value>Decrease font size</value>
+  </data>
+  <data name="Spreadsheet_ExportAsExcel" xml:space="preserve">
+    <value>Export as Excel</value>
+  </data>
+  <data name="Spreadsheet_FontColor" xml:space="preserve">
+    <value>Font color</value>
+  </data>
+  <data name="Spreadsheet_IncreaseFontSize" xml:space="preserve">
+    <value>Increase font size</value>
+  </data>
+  <data name="Spreadsheet_LeftAlign" xml:space="preserve">
+    <value>Align left</value>
+  </data>
+  <data name="Spreadsheet_RightAlign" xml:space="preserve">
+    <value>Align right</value>
+  </data>
 </root>
