Enhance appointment titles and add confirmation dialog
Updated `ActivityAppointment.cs` and `SchedulerAppointment.cs` to include `WODesc` in the `Title` property for better context. Introduced a confirmation dialog in `ActivitiesPage.razor` for updating appointments, allowing users to confirm changes with "Yes" and "No" buttons. Added properties to manage the dialog state and modified the `OnUpdateAppointment` method to handle confirmation logic. The `OnDeleteAppointment` method is currently commented out for future implementation.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1106,4 +1106,10 @@
   <data name="SchedulerRowHeight" xml:space="preserve">
     <value>Wysokość wiersza</value>
   </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>Potwierdź aktualizację</value>
+  </data>
+  <data name="ApplyChangesQuestion" xml:space="preserve">
+    <value>Czy chcesz zastosować zmiany?</value>
+  </data>
 </root>
