clean up and refactor
- Removed overflow property for item descriptions to improve text wrapping.
- Updated TelerikNotification class and added new tooltip and filter controls for better user interaction.
- Refined conditional logic for displaying different views (Day, Week, Month) to streamline the interface.
- Introduced toggles for filtering work orders and activities.
- Added new localized strings to support new features.
- Improved notification handling for better user feedback.
- Cleaned up code by removing redundant lines for better maintainability.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1112,4 +1112,10 @@
   <data name="ApplyChangesQuestion" xml:space="preserve">
     <value>Czy chcesz zastosować zmiany?</value>
   </data>
+  <data name="Scheduler_ShowWorkOrders" xml:space="preserve">
+    <value> Pokaż zlecenia</value>
+  </data>
+  <data name="Scheduler_ShowActivities" xml:space="preserve">
+    <value> Pokaż aktywności</value>
+  </data>
 </root>
