--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -270,6 +270,9 @@
   <data name="Settings_Title" xml:space="preserve">
     <value>Ustawienia</value>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Ustawienia</value>
+  </data>
   <data name="Settings_ApiAddress" xml:space="preserve">
     <value>Adres API</value>
   </data>
@@ -794,7 +797,7 @@
     <value>Należy wybrać kategorię.</value>
   </data>
   <data name="Workload_Positive" xml:space="preserve">
-    <value>Coszt musi być liczbą dodatnią.</value>
+    <value>Czas musi być liczbą dodatnią z zakresu 0–24 godziny.</value>
   </data>
   <data name="Workload_0_24" xml:space="preserve">
     <value>Wartość musi być z zakresu od 0 do 24</value>
@@ -1106,9 +1109,6 @@
   <data name="SchedulerRowHeight" xml:space="preserve">
     <value>Wysokość wiersza</value>
   </data>
-  <data name="ConfirmUpdate" xml:space="preserve">
-    <value>Potwierdź aktualizację</value>
-  </data>
   <data name="ApplyChangesQuestion" xml:space="preserve">
     <value>Czy chcesz zastosować zmiany?</value>
   </data>
@@ -1117,5 +1117,8 @@
   </data>
   <data name="Scheduler_ShowActivities" xml:space="preserve">
     <value> Pokaż aktywności</value>
+  </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>Potwierdź aktualizację</value>
   </data>
 </root>
