--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -270,6 +270,9 @@
   <data name="Settings_Title" xml:space="preserve">
     <value>Settings</value>
   </data>
+  <data name="Settings" xml:space="preserve">
+    <value>Settings</value>
+  </data>
   <data name="Settings_ApiAddress" xml:space="preserve">
     <value>API Address</value>
   </data>
@@ -801,7 +804,7 @@
     <value>Category must be selected.</value>
   </data>
   <data name="Workload_Positive" xml:space="preserve">
-    <value>Cost must be a positive number.</value>
+    <value>Time must be a positive number between 0 - 24h</value>
   </data>
   <data name="Workload_0_24" xml:space="preserve">
     <value>The value must be between 0 and 24</value>
