Add workday settings and improve localization support
- Introduced `WorkDayStart` and `WorkDayEnd` properties in `IdentityData.cs` to manage workday timings.
- Enhanced `Settings.razor` UI with localized labels and `TelerikTimePicker` components for selecting workday times.
- Updated `OnInitializedAsync` to load workday settings from `UserState`.
- Refactored `ProceedWithSave` to save multiple settings efficiently using a dictionary.
- Added new localized string properties in `UIStrings.Designer.cs` and updated resource files for translations.
- Extended user settings loading in `ApiServiceClient.Settings.cs` to include workday properties.
- Updated `UserState.cs` to maintain user-specific workday settings.
- Changed `Save` method in `SettingsController.cs` to asynchronous for improved performance and added semaphore lock for thread safety.
- Made `SetSetting` method in `UserSettings.cs` asynchronous to allow non-blocking file operations.

--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -1129,4 +1129,13 @@
   <data name="Scheduler_ShowActivities" xml:space="preserve">
     <value>Show activities</value>
   </data>
+  <data name="Settings_Language" xml:space="preserve">
+    <value>Interface language</value>
+  </data>
+  <data name="WorkDayStart" xml:space="preserve">
+    <value>Work day end</value>
+  </data>
+  <data name="WorkDayEnd" xml:space="preserve">
+    <value>Work day start</value>
+  </data>
 </root>
