--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1121,4 +1121,13 @@
   <data name="ConfirmUpdate" xml:space="preserve">
     <value>Potwierdź aktualizację</value>
   </data>
+  <data name="Settings_Language" xml:space="preserve">
+    <value>Język interfejsu</value>
+  </data>
+  <data name="WorkDayStart" xml:space="preserve">
+    <value>Koniec dnia pracy</value>
+  </data>
+  <data name="WorkDayEnd" xml:space="preserve">
+    <value>Początek dnia pracy</value>
+  </data>
 </root>
