disable Delete button for Appointment & add weather widget
- Introduced `ShowAssignedColumnFilter` parameter in `OrdersGrid.razor` to control the visibility of the assigned person filter.
- Updated `MainLayout.razor` to include a weather widget, improving user interface functionality.
- Improved error handling in `ApiServiceClient.cs` for better API response processing.
- Added `WeatherWidget.razor` component to fetch and display weather information based on user location.
-fix warnings

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1118,9 +1118,6 @@
   <data name="Scheduler_ShowActivities" xml:space="preserve">
     <value> Pokaż aktywności</value>
   </data>
-  <data name="ConfirmUpdate" xml:space="preserve">
-    <value>Potwierdź aktualizację</value>
-  </data>
   <data name="Settings_Language" xml:space="preserve">
     <value>Język interfejsu</value>
   </data>
@@ -1129,5 +1126,11 @@
   </data>
   <data name="WorkDayEnd" xml:space="preserve">
     <value>Początek dnia pracy</value>
+  </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>Potwierdź aktualizację</value>
+  </data>
+  <data name="My_Page" xml:space="preserve">
+    <value>Moja strona</value>
   </data>
 </root>
