--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -1138,4 +1138,7 @@
   <data name="WorkDayEnd" xml:space="preserve">
     <value>Work day start</value>
   </data>
+  <data name="My_Page" xml:space="preserve">
+    <value>My page</value>
+  </data>
 </root>
