Enhance weather handling and introduce timer component
- Updated `BlazorTool.Client.csproj` to ensure `utility.js` is always copied to the output directory.
- Added null checks in `OrdersGrid.razor` to prevent null reference exceptions.
- Introduced a reusable timer component in `Timer.razor` for better interval management and state handling.
- Improved weather data handling in `WeatherWidget.razor`, enhancing error handling and user feedback.
- Implemented a timer in `OrdersPage.razor` for automatic data refresh and added a notification system for new orders.
- Added `WeatherController.cs` to manage API requests for weather data with caching to optimize performance.
- Updated localization files to support new strings for "New Orders" in English and Polish.

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1127,10 +1127,13 @@
   <data name="WorkDayEnd" xml:space="preserve">
     <value>Początek dnia pracy</value>
   </data>
+  <data name="My_Page" xml:space="preserve">
+    <value>Moja strona</value>
+  </data>
   <data name="ConfirmUpdate" xml:space="preserve">
     <value>Potwierdź aktualizację</value>
   </data>
-  <data name="My_Page" xml:space="preserve">
-    <value>Moja strona</value>
+  <data name="New_Orders" xml:space="preserve">
+    <value>nowych zleceń</value>
   </data>
 </root>
