optimization for big DB load only active WO

--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -1133,13 +1133,16 @@
   <data name="New_Orders" xml:space="preserve">
     <value>nowych zleceń</value>
   </data>
-  <data name="ConfirmUpdate" xml:space="preserve">
-    <value>Potwierdź aktualizację</value>
-  </data>
   <data name="OrdersPage_RefreshInterval" xml:space="preserve">
     <value>Interwał odświeżania</value>
   </data>
   <data name="OrdersPage_Minutes" xml:space="preserve">
     <value>minut</value>
+  </data>
+  <data name="ConfirmUpdate" xml:space="preserve">
+    <value>Potwierdź aktualizację</value>
+  </data>
+  <data name="Only_Active" xml:space="preserve">
+    <value>Pokaż tylko aktywne zlecenia</value>
   </data>
 </root>
