Refactor buttons to reusable components
Introduce `AddButton` and `RefreshButton` components in Blazor, replacing existing button implementations across multiple Razor files.
Refactor `DevicesPage.razor` to use `RefreshButton` and streamline device loading logic.

--- a/BlazorTool.Client/Resources/UIStrings.resx
+++ b/BlazorTool.Client/Resources/UIStrings.resx
@@ -352,6 +352,9 @@
   <data name="Scheduler_ReloadAllData" xml:space="preserve">
     <value>Reload all data</value>
   </data>
+  <data name="ReloadDevices" xml:space="preserve">
+    <value>Reload all devices</value>
+  </data>
   <data name="Scheduler_ColumnWidth" xml:space="preserve">
     <value>Column Width:</value>
   </data>
