--- a/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
+++ b/BlazorTool.Client/Resources/UIStrings.pl-PL.resx
@@ -352,6 +352,9 @@
   <data name="Scheduler_ReloadAllData" xml:space="preserve">
     <value>Przeładuj wszystkie dane</value>
   </data>
+  <data name="ReloadDevices" xml:space="preserve">
+    <value>Przeładuj wszystkie urządzenia</value>
+  </data>
   <data name="Scheduler_ColumnWidth" xml:space="preserve">
     <value>Szerokość kolumn:</value>
   </data>
